--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>
               Manage simplifica para equipes de software
               planejar as tarefas do dia-a-dia, mantendo os objetivos 
-              maiores da euipe em vista.
+              maiores da equipe em vista.
             </p>
   
             <button class="get-started">Iniciar</button>
