--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <button class="go">Enviar</button>
         <p class="copyright">
           Copyright 2022. Todos os direitos reservados a
-          <a href="https://www.instagram.com/yfg.eduardo_lavoura/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.instagram.com/yfg.lavoura/" target="_blank" rel="noopener noreferrer">
             @yfg.eduardo_lavoura
           </a>
         </p>
